fix blinking cursor in dark mode

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -173,10 +173,6 @@ img {
     font-weight: 100;
     font-size: 30px;
     color: #2E3D48;
-    -webkit-animation: 1s blink step-end infinite;
-    -moz-animation: 1s blink step-end infinite;
-    -ms-animation: 1s blink step-end infinite;
-    -o-animation: 1s blink step-end infinite;
     animation: 1s blink step-end infinite;
 }
 
@@ -192,7 +188,7 @@ span[class=ln] {
     user-select: none;
 }
 
-@keyframes "blink" {
+@keyframes blink {
     from, to {
         color: transparent;
     }
@@ -201,41 +197,6 @@ span[class=ln] {
     }
 }
 
-@-moz-keyframes blink {
-    from, to {
-        color: transparent;
-    }
-    50% {
-        color: black;
-    }
-}
-
-@-webkit-keyframes "blink" {
-    from, to {
-        color: transparent;
-    }
-    50% {
-        color: black;
-    }
-}
-
-@-ms-keyframes "blink" {
-    from, to {
-        color: transparent;
-    }
-    50% {
-        color: black;
-    }
-}
-
-@-o-keyframes "blink" {
-    from, to {
-        color: transparent;
-    }
-    50% {
-        color: black;
-    }
-}
 
 div.highlight {
     margin-top: 1em;
