--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -126,6 +126,19 @@ div.notices.info .highlight{
 	border-radius: 10px;
 }
 
+.blinking-cursor {
+    animation: 1s dark-blink step-end infinite;
+}
+
+@keyframes dark-blink {
+    from, to {
+        color: white;
+    }
+    50% {
+        color: black;
+    }
+}
+
 /* syntax highlighting (monkai) */
 
 /* Background */ .chroma { color: #f8f8f2; background-color: #272822 }
